stylování fixed, při reloadu se ale rozbíjí dark mode, pokud je jako default..

--- a/css/navBar.css
+++ b/css/navBar.css
@@ -121,9 +121,9 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
 }
 
-/* .desktop-nav .button-container {
-  display: none;
-} */
+.checkbox-desktop {
+  margin-right: 5rem;
+}
 
 .fixed {
   position: fixed;
